[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
serde = "1.0.152"
serde_json = "1.0.93"
ureq = { version = "2.6.2", features = ["json"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
